feat: 가장 최근에 조회한 것부터 최근 일주일 이내에 한 번 이상 조회된 도시 조회 test