@@ -13,6 +13,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
 import org.springframework.context.annotation.Import;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static com.interpark.triple.domain.user.domain.entity.UsersRole.ROLE_USER;
@@ -49,7 +50,7 @@ class CityRepositoryTest {
     // given
     Users givenUser = usersRepository.save(Users.builder().name("기현").role(ROLE_USER).build());
     List<City> givenCityList = createGivenCityListWithFor(givenUser);
-    createGivenCityCreatedTwoDaysAgo(givenUser);
+    createGivenCityCreatedInputDaysAgo(givenUser, 8);
 
     // when
     List<CityInfo> actualCityInfoList =
@@ -58,9 +59,6 @@ class CityRepositoryTest {
     City ac = cityRepository.findCityById(1L).orElseThrow(NotFoundCityEntityException::new);
     City ac1 = cityRepository.findCityById(2L).orElseThrow(NotFoundCityEntityException::new);
     City ac2 = cityRepository.findCityById(3L).orElseThrow(NotFoundCityEntityException::new);
-    System.out.println(ac.getName() + ac.getCreatedDate() + ac.getUpdatedDate());
-    System.out.println(ac1.getName() + ac1.getCreatedDate() + ac1.getUpdatedDate());
-    System.out.println(ac2.getName() + ac2.getCreatedDate() + ac2.getUpdatedDate());
 
     for (CityInfo city : actualCityInfoList) {
       System.out.println(city.getName() + city.getCreatedAt());
@@ -85,22 +83,64 @@ class CityRepositoryTest {
                 actualCityInfoList.get(2).getIntroContent()));
   }
 
-  private void createGivenCityCreatedTwoDaysAgo(Users givenUser) {
+  @Test
+  @DisplayName("최근 일주일 이내에 한 번 이상 조회된 도시, 가장 최근에 조회한 것부터 조회")
+  void findCityInfoIfViewDuringSevenDaysOrderByRecentlyViewTest() {
+    // given
+    Users givenUser = usersRepository.save(Users.builder().name("기현").role(ROLE_USER).build());
+    List<City> givenCityList = createGivenCityListWithFor(givenUser);
+    createGivenCityCreatedInputDaysAgo(givenUser, 2);
+    createGivenCityNoView(givenUser);
+    // when
+    List<CityInfo> actualCityInfoList =
+        cityRepository.findCityInfoIfViewDuringSevenDaysOrderByRecentlyView(1L, 10);
+
+    // then
+    assertAll(
+        () -> assertEquals(3, actualCityInfoList.size()),
+        () -> assertEquals(givenCityList.get(0).getName(), actualCityInfoList.get(0).getName()),
+        () ->
+            assertEquals(
+                givenCityList.get(0).getIntroContent(),
+                actualCityInfoList.get(0).getIntroContent()),
+        () -> assertEquals(givenCityList.get(1).getName(), actualCityInfoList.get(1).getName()),
+        () ->
+            assertEquals(
+                givenCityList.get(1).getIntroContent(),
+                actualCityInfoList.get(1).getIntroContent()),
+        () -> assertEquals(givenCityList.get(2).getName(), actualCityInfoList.get(2).getName()),
+        () ->
+            assertEquals(
+                givenCityList.get(2).getIntroContent(),
+                actualCityInfoList.get(2).getIntroContent()));
+  }
+
+  private void createGivenCityCreatedInputDaysAgo(Users givenUser, Integer agoDays) {
     City cityCreatedTwoDaysAgo =
         City.builder().name("서울").introContent("여기는 서울!").users(givenUser).build();
-    cityCreatedTwoDaysAgo.setCreatedAt(now().minusDays(2));
+    cityCreatedTwoDaysAgo = cityRepository.save(cityCreatedTwoDaysAgo);
+    cityCreatedTwoDaysAgo.setCreatedAt(now().minusDays(agoDays));
     cityRepository.save(cityCreatedTwoDaysAgo);
   }
 
   private List<City> createGivenCityListWithFor(Users givenUser) {
     List<City> cityList =
-        List.of(
+        Arrays.asList(
             City.builder().name("서울").introContent("여기는 서울!").users(givenUser).build(),
             City.builder().name("수원").introContent("여기는 수원!").users(givenUser).build(),
             City.builder().name("부산").introContent("여기는 부산!").users(givenUser).build());
+    cityList.get(0).plusViewOne();
+    cityList.get(1).plusViewOne();
+    cityList.get(2).plusViewOne();
     cityRepository.save(cityList.get(0));
     cityRepository.save(cityList.get(1));
     cityRepository.save(cityList.get(2));
     return cityList;
+  }
+
+  private City createGivenCityNoView(Users givenUser) {
+    City city = City.builder().name("광주").introContent("여기는 광주!").users(givenUser).build();
+    cityRepository.save(city);
+    return city;
   }
 }
